--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     '</tr>';
 
                 for (var i = 0; i < arrObj.length; i++) {
-
+                    //arrObj[i].Statement = "";
                     var voteForm = $('<form>');
                     var yesInput = $('<input senatorid="' + i + '" type="radio" id="voteChoice1" name="vote" value="Yes">');
                     var yesLabel = $('<label for="voteChoice1">Yes</label>');
@@ -64,6 +64,9 @@
                     var noLabel = $('<label for="voteChoice2">No / Undecided</label></div>');
                     var NAInput = $('<input senatorid="' + i + '" type="radio" id="voteChoice3" name="vote" value="NA">');
                     var NALabel = $('<label for="voteChoice3">NA</label></div>');
+                    var statementInput = $('<input senatorid="' + i + '" type="text" id="statement'+i+'" name="vote" value="'+arrObj[i].Statement+'">');
+                    var statementLabel = $('<label for="voteChoice4">Statement</label></div>');
+                    var submit =$('<button senatorid="' + i + '">Submit Statement</button>');
                     if (arrObj[i].Vote === 'Yes') {
                         $(yesInput).attr("checked", "checked");
                     } else if(arrObj[i].Vote === 'No') {
@@ -77,6 +80,9 @@
                     $(voteForm).append(noLabel);
                     $(voteForm).append(NAInput);
                     $(voteForm).append(NALabel);
+                    $(voteForm).append(statementLabel);
+                    $(voteForm).append(statementInput);
+                    $(voteForm).append(submit);
 
 
                     myvar += '<tr>' +
@@ -94,6 +100,15 @@
                     if($('#error').length) {$('#error').remove();}
                     var id = parseInt($(this).attr('senatorid'));
                     arrObj[id].Vote = $(this).val();
+                    database.ref().set({
+                        senators: arrObj
+                    });
+                })
+                $('button').on('click', function (e) {
+                    if($('#error').length) {$('#error').remove();}
+                    var id = parseInt($(this).attr('senatorid'));
+                    arrObj[id].Statement = $('#statement'+id).val();
+                    debugger;
                     database.ref().set({
                         senators: arrObj
                     });
